--- a/concrete_compressive_strength.ipynb
+++ b/concrete_compressive_strength.ipynb
@@ -683,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Observation : </b> From the above boxplot we can see that there are outliers in some columns. From the above ploting I can say slag, water, superplastic, fineagg and age column are having clear outliers. Let see these plots separately. I will be finding the outliers counts in individual attributes analysis and <b>fixing the outliers</b> after visualization and analysis of each attribute."
+    "<b>Observation : </b> From the above boxplot we can see that there are outliers in some columns. From the above plotting I can say slag, water, superplastic, fineagg and age column are having clear outliers. Let's see these plots separately. I will be finding the outliers counts in individual attributes analysis and <b>fixing the outliers</b> after visualization and analysis of each attribute."
    ]
   },
   {
@@ -729,12 +729,12 @@
    "source": [
     "<b>Observation : </b> From the above pair plot we can infer the association among the attributes and target column as follows:\n",
     "- No high correlation between any two features\n",
-    "- Strength have some possitive linear relation with cement and some with superplastic that means if the quantity of cement or superplastic is more then concrete is having more strength.\n",
+    "- Strength has some possitive linear relation with cement and superplastic that is, if the quantity of cement or superplastic is more then concrete is having more strength.\n",
     "- More strength is between 20-150 days aprox.\n",
     "- Strength is again decreasing again after 250 days approx.\n",
-    "- Also It is quite visible multiple gaussian slag,ash,water, superplastic, age.\n",
-    "- slag, cement and ash also have a tendency to create linear relation but it's not prominant.\n",
-    "- Rest of the relation between other individual attributes are mostly formed cloud shape or symmetrical shape."
+    "- Also It is quite visible multiple non-gaussian distributions like slag,ash,water, superplastic, age.\n",
+    "- slag, cement and ash also have a tendency to create linear relation but it's not prominent.\n",
+    "- Rest of the relation between other individual attributes are mostly formed cloud shape or asymmetrical shape."
    ]
   },
   {
@@ -792,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight : </b>From above we can see that there are no outliers in cement column and it's looks like normally distributed. Cemennt values lies between range 100 to 500. "
+    "<b>Insight : </b>From above we can see that there are no outliers in cement column and it looks like normally distributed. Cemennt values lies between range 100 to 500. "
    ]
   },
   {
@@ -846,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight: </b>From above boxplot we can see that there are outliers in slug values lies between range 100 to 200. 400 is the higest slug value."
+    "<b>Insight: </b>From above boxplot we can see that there are outliers in slag values lies between range 100 to 200. 400 is the higest slag value."
    ]
   },
   {
@@ -900,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight :</b> From above we can see that there are no outliers in ash column. We can see a tall tower at range of 0 to 20 which indicates if slug value is between 100 and 200."
+    "<b>Insight :</b> From above we can see that there are no outliers in ash column."
    ]
   },
   {
@@ -1190,7 +1190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight : </b>From above we can see that there are outliers in Fineagg column and there are two peaks in distribution plot and there is right skewness because long tail is at right side(mean>median)."
+    "<b>Insight : </b>From above we can see that there are outliers in Fineagg column."
    ]
   },
   {
@@ -1343,10 +1343,10 @@
    "source": [
     "## ----------------------------------------------- Fixing Outliers -----------------------------------------------------\n",
     "\n",
-    "- As we have seen above outlier are presence in the given dataset.\n",
+    "- As we have seen above outliers are present in the dataset.\n",
     "- There are multiple ways to deal with outliers but I mostly prefer either to drop the outliers or repalce it with median/mean.\n",
     "- Here I am going to replace the outliers with median becase if we drop then ther may be chance to loose some important information.\n",
-    "- I have also shown the number of outliers presence in each column in below code."
+    "- I have also shown the number of outliers present in each column in below code."
    ]
   },
   {
@@ -1434,7 +1434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Important : </b> Now we can see in boxplot that most of the outliers are replaced with their median in dataframe. We have seen that outliers most of the outliers are removed but because of the gaussian by replacing it with median value, the attributes raised with new outliers which we can ignore. "
+    "<b>Important : </b> Now we can see in boxplot that most of the outliers are replaced with their median values."
    ]
   },
   {
@@ -1783,7 +1783,7 @@
     }
    ],
    "source": [
-    "cluster_range = range( 2, 6 )   # expect 3 to four clusters from the pair panel visual inspection hence restricting from 2 to 6\n",
+    "cluster_range = range( 2, 6 )
     "cluster_errors = []\n",
     "for num_clusters in cluster_range:\n",
     "  clusters = KMeans( num_clusters, n_init = 5)\n",
@@ -1892,7 +1892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardization Independent Varaibles :-"
+    "## Standardising Independent Varaibles :-"
    ]
   },
   {
@@ -2092,7 +2092,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will be  creating create 3 part of our dataset. We'll be working working test and validation data. And one part of data will be kept for Test the final score of our models."
+    "## We will be  creating create 3 part of our dataset. We'll be working with train and test data. And one part of data will be kept for validating the final model."
    ]
   },
   {
