--- a/concrete_compressive_strength.ipynb
+++ b/concrete_compressive_strength.ipynb
@@ -4,6 +4,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b> Dataset : </b> Concrete Compressive Strength\n",
+    "\n",
+    "<b> Domain : </b>Material manufacturing\n",
+    "\n",
+    "<b>Description: </b> The actual concrete compressive strength (MPa) for a given mixture under a\n",
+    "specific age (days) was determined from laboratory. Data is in raw form (not\n",
+    "scaled).The data has 8 quantitative input variables, and 1 quantitative output\n",
+    "variable, and 1030 instances (observations).\n",
+    "\n",
+    "<b> Objective : </b>Modeling of strength of high performance concrete using Machine Learning\n",
+    "\n",
+    "\n",
+    "<b>Steps : </b>This project involved feature exploration and selection to predict the strength of high-performance concrete. Used Regression models like Decision tree regressors to find out the most important features and predict the strength. Cross-validation techniques and Grid search were used to tune the parameters for best model performance.\n",
+    "\n",
+    "<b>Skills and Tools :</b> Regression, Decision trees, feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/kaggle/input/concrete-compressive-strength/concrete.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
+    "# It is defined by the kaggle/python docker image: https://github.com/kaggle/docker-python\n",
+    "# For example, here's several helpful packages to load in \n",
+    "\n",
+    "\n",
+    "# Input data files are available in the \"../input/\" directory.\n",
+    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
+    "\n",
+    "import os\n",
+    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))\n",
+    "\n",
+    "# Any results you write to the current directory are saved as output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Import the necessary libraries :"
    ]
   },
@@ -256,7 +310,7 @@
     }
    ],
    "source": [
-    "df  = pd.read_csv('/input/concrete-compressive-strength/concrete.csv')\n",
+    "df  = pd.read_csv('/kaggle/input/concrete-compressive-strength/concrete.csv')\n",
     "df.head(10)"
    ]
   },
@@ -683,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Observation : </b> From the above boxplot we can see that there are outliers in some columns. From the above plotting I can say slag, water, superplastic, fineagg and age column are having clear outliers. Let's see these plots separately. I will be finding the outliers counts in individual attributes analysis and <b>fixing the outliers</b> after visualization and analysis of each attribute."
+    "<b>Observation : </b> From the above boxplot we can see that there are outliers in some columns. From the above ploting I can say slag, water, superplastic, fineagg and age column are having clear outliers. Let see these plots separately. I will be finding the outliers counts in individual attributes analysis and <b>fixing the outliers</b> after visualization and analysis of each attribute."
    ]
   },
   {
@@ -729,12 +783,12 @@
    "source": [
     "<b>Observation : </b> From the above pair plot we can infer the association among the attributes and target column as follows:\n",
     "- No high correlation between any two features\n",
-    "- Strength has some possitive linear relation with cement and superplastic that is, if the quantity of cement or superplastic is more then concrete is having more strength.\n",
+    "- Strength have some possitive linear relation with cement and some with superplastic that means if the quantity of cement or superplastic is more then concrete is having more strength.\n",
     "- More strength is between 20-150 days aprox.\n",
     "- Strength is again decreasing again after 250 days approx.\n",
-    "- Also It is quite visible multiple non-gaussian distributions like slag,ash,water, superplastic, age.\n",
-    "- slag, cement and ash also have a tendency to create linear relation but it's not prominent.\n",
-    "- Rest of the relation between other individual attributes are mostly formed cloud shape or asymmetrical shape."
+    "- Also It is quite visible multiple gaussian slag,ash,water, superplastic, age.\n",
+    "- slag, cement and ash also have a tendency to create linear relation but it's not prominant.\n",
+    "- Rest of the relation between other individual attributes are mostly formed cloud shape or symmetrical shape."
    ]
   },
   {
@@ -792,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight : </b>From above we can see that there are no outliers in cement column and it looks like normally distributed. Cemennt values lies between range 100 to 500. "
+    "<b>Insight : </b>From above we can see that there are no outliers in cement column and it's looks like normally distributed. Cemennt values lies between range 100 to 500. "
    ]
   },
   {
@@ -846,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight: </b>From above boxplot we can see that there are outliers in slag values lies between range 100 to 200. 400 is the higest slag value."
+    "<b>Insight: </b>From above boxplot we can see that there are outliers in slug values lies between range 100 to 200. 400 is the higest slug value."
    ]
   },
   {
@@ -900,7 +954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight :</b> From above we can see that there are no outliers in ash column."
+    "<b>Insight :</b> From above we can see that there are no outliers in ash column. We can see a tall tower at range of 0 to 20 which indicates if slug value is between 100 and 200."
    ]
   },
   {
@@ -1190,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Insight : </b>From above we can see that there are outliers in Fineagg column."
+    "<b>Insight : </b>From above we can see that there are outliers in Fineagg column and there are two peaks in distribution plot and there is right skewness because long tail is at right side(mean>median)."
    ]
   },
   {
@@ -1343,10 +1397,10 @@
    "source": [
     "## ----------------------------------------------- Fixing Outliers -----------------------------------------------------\n",
     "\n",
-    "- As we have seen above outliers are present in the dataset.\n",
+    "- As we have seen above outlier are presence in the given dataset.\n",
     "- There are multiple ways to deal with outliers but I mostly prefer either to drop the outliers or repalce it with median/mean.\n",
     "- Here I am going to replace the outliers with median becase if we drop then ther may be chance to loose some important information.\n",
-    "- I have also shown the number of outliers present in each column in below code."
+    "- I have also shown the number of outliers presence in each column in below code."
    ]
   },
   {
@@ -1434,7 +1488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Important : </b> Now we can see in boxplot that most of the outliers are replaced with their median values."
+    "<b>Important : </b> Now we can see in boxplot that most of the outliers are replaced with their median in dataframe. We have seen that outliers most of the outliers are removed but because of the gaussian by replacing it with median value, the attributes raised with new outliers which we can ignore. "
    ]
   },
   {
@@ -1783,7 +1837,7 @@
     }
    ],
    "source": [
-    "cluster_range = range( 2, 6 )
+    "cluster_range = range( 2, 6 )   # expect 3 to four clusters from the pair panel visual inspection hence restricting from 2 to 6\n",
     "cluster_errors = []\n",
     "for num_clusters in cluster_range:\n",
     "  clusters = KMeans( num_clusters, n_init = 5)\n",
@@ -1892,7 +1946,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standardising Independent Varaibles :-"
+    "## Standardization Independent Varaibles :-"
    ]
   },
   {
@@ -2092,7 +2146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will be  creating create 3 part of our dataset. We'll be working with train and test data. And one part of data will be kept for validating the final model."
+    "## We will be  creating create 3 part of our dataset. We'll be working working test and validation data. And one part of data will be kept for Test the final score of our models."
    ]
   },
   {
