--- a/concrete_compressive_strength.ipynb
+++ b/concrete_compressive_strength.ipynb
@@ -1,60 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b> Dataset : </b> Concrete Compressive Strength\n",
-    "\n",
-    "<b> Domain : </b>Material manufacturing\n",
-    "\n",
-    "<b>Description: </b> The actual concrete compressive strength (MPa) for a given mixture under a\n",
-    "specific age (days) was determined from laboratory. Data is in raw form (not\n",
-    "scaled).The data has 8 quantitative input variables, and 1 quantitative output\n",
-    "variable, and 1030 instances (observations).\n",
-    "\n",
-    "<b> Objective : </b>Modeling of strength of high performance concrete using Machine Learning\n",
-    "\n",
-    "\n",
-    "<b>Steps : </b>This project involved feature exploration and selection to predict the strength of high-performance concrete. Used Regression models like Decision tree regressors to find out the most important features and predict the strength. Cross-validation techniques and Grid search were used to tune the parameters for best model performance.\n",
-    "\n",
-    "<b>Skills and Tools :</b> Regression, Decision trees, feature engineering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/concrete-compressive-strength/concrete.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load in \n",
-    "\n",
-    "\n",
-    "# Input data files are available in the \"../input/\" directory.\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# Any results you write to the current directory are saved as output."
-   ]
-  },
-  {
+ "cells": [{
    "cell_type": "markdown",
    "metadata": {},
    "source": [
